[package]
authors = ["Mike Shultz <shultzm@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "orient"
version = "0.1.0"

[dependencies]
accelerometer = "0.12.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.3.3"
lsm303agr = "0.2.2"
num-traits = { version = "0.2.15", default-features = false, features = ["libm"] }
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
switch-hal = "0.4.0"
systick-monotonic = "1.0.0"

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.9.1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "orient"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
